# stempel

./: .gitignore  Cargo.toml  README.md  time_storage.txt
.github/: build_check.yml
.github/workflows/: build_check.yml  build_master.yml  check_pr.yml
src/: balance.rs  clap_cli.rs  cli_input.rs  commands.rs  delta.rs  error.rs  errors.rs  lib.rs  main.rs  month.rs  storage.rs
src/commands/: config.rs  control.rs  mod.rs  stats.rs
src/storage/: mod.rs
