[package]
name = "stempel"
version = "0.13.0"
authors = ["Korbinian Maier <korbinian.maier@tum.de>"]
license = "MIT"
edition = "2018"
readme = "README.md"
description = "Track the time you spent working"
categories = ["command-line-utilities"]
keywords = ["time", "tracking", "management", "clock", "punch"]
repository = "https://github.com/KuabeM/stempel"

exclude = [".github/*"]

[badges]
maintenance = { status = "actively-developed" }


[dependencies]
chrono = { version = "0.4", features = ["serde"] }
colored = "1.9"
env_logger = "0.7"
failure = "0.1"
itertools = "0.10"
log = "0.4"
num_enum = "0.4.3"
num-traits = "0.2"
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"

[profile.release]
lto = true
