[package]
name = "stempel"
version = "0.13.1"
authors = ["Korbinian Maier <korbinian.maier@tum.de>"]
license = "MIT"
edition = "2018"
readme = "README.md"
description = "Track the time you spent working"
categories = ["command-line-utilities"]
keywords = ["time", "tracking", "management", "clock", "punch"]
repository = "https://github.com/KuabeM/stempel"

exclude = [".github/*"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
color-eyre = { default-features = false, version = "0.5.7" }
thiserror = "1"

chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
colored = "1.9"
dirs = "4"
env_logger = { default-features = false, version = "0.7" }
itertools = "0.10"
log = "0.4"
num-traits = { default-features = false, version = "0.2" }
num_enum = { default-features = false, version = "0.4.3" }
regex = { default-features = false, features = [ "std", "perf" ], version = "1.4" }
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"
structopt = "0.3"

[profile.release]
lto = true
