[package]
name = "stempel"
version = "0.17.0"
authors = ["Korbinian Maier <korbinian.maier@tum.de>"]
license = "MIT"
edition = "2021"
readme = "README.md"
description = "Track the time you spent working"
categories = ["command-line-utilities"]
keywords = ["time", "tracking", "management", "clock", "punch"]
repository = "https://github.com/KuabeM/stempel"
homepage = "https://github.com/KuabeM/stempel"

exclude = [".github/*"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"], default-features = false }
clap = { version = "4", features = ["derive"] }
clap_complete = "4.1.4"

color-eyre = { default-features = false, version = "0.6" }
thiserror = "1"

colored = "2"
dirs = "4"
env_logger = { default-features = false, features = ["auto-color", "regex"], version = "0.10" }
log = "0.4"

humantime = "2"
itertools = "0.10"
num-traits = { default-features = false, version = "0.2" }
num_enum = { default-features = false, version = "0.5" }

serde = { version = "1.0", features = ["derive"], default-features = false }
serde_json = "1.0"

[profile.release]
lto = true
